force-app/main/default/objects/Trailblazer_Event_Session__c/Trailblazer_Event_Session__c.object-meta.xml
<CustomObject>
    <description>Junction object to associate a session idea with a trailblazer event - essentially this is the session proposal submitted to a call for papers.</description>
    <label>Trailblazer Event Session</label>
    <nameField>
        <displayFormat>TES-{0000}</displayFormat>
        <label>Trailblazer Event Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trailblazer Event Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>