force-app/main/default/objects/Trailblazer_Event_Session__c/fields/Abstract__c.field-meta.xml
<CustomField>
    <fullName>Abstract__c</fullName>
    <description>The abstract for the session submission for this trailblazer event.</description>
    <label>Abstract</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>