force-app/main/default/objects/Trailblazer_Event_Session__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <description>The session that this Trailblazer Event Session is associated with</description>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Trailblazer Event Sessions</relationshipLabel>
    <relationshipName>Trailblazer_Event_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>