force-app/main/default/objects/Trailblazer_Event_Session__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of the session submission for this particular event.</description>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>