force-app/main/default/objects/Trailblazer_Event_Session__c/fields/Trailblazer_Event__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Event__c</fullName>
    <description>The Trailblazer Event that this Trailblazer Event Session is associated with.</description>
    <label>Trailblazer Event</label>
    <referenceTo>Trailblazer_Event__c</referenceTo>
    <relationshipLabel>Trailblazer Event Sessions</relationshipLabel>
    <relationshipName>Trailblazer_Event_Sessions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>