force-app/main/default/objects/Trailblazer_Event_Session__c/recordTypes/Generic_Event.recordType-meta.xml
<RecordType>
    <fullName>Generic_Event</fullName>
    <active>true</active>
    <description>Record type for a generic event - not run by any specific vendor or targeting any specific technology.</description>
    <label>Generic Event</label>
</RecordType>