force-app/main/default/objects/Trailblazer_Event_Session__c/recordTypes/Salesforce_Event.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Event</fullName>
    <active>true</active>
    <description>An event organised by Salesforce or targeting Salesforce technology</description>
    <label>Salesforce Event</label>
</RecordType>